bug: fix the overflow on portfolio mobile view

--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,7 @@
     height: 40%;
     text-align: center;
     color: white;
+    background-color: red;
   
     
 }
@@ -293,7 +294,9 @@ footer p{
         line-height: 1.5rem;
     }
     
-    
+    #section3{
+        border: 2px solid red ;
+    }
     .projects{
         height: 40%;
         display: flex;
@@ -311,26 +314,53 @@ footer p{
     }
     
     .row{
-        width: 40%;
-        height: 100%;
-        display: block;
-        display: flex;
-    }
-    .portfolio{
-        display: flex;
-        justify-content: end;
-        position: relative;
-        height: 100vh;
-        %
+        width: 70%;
+        height: 50%;
+        border: 2px solid magenta;
+       
     }
     .box{
+        height: 50%;
+        width: 45%;
+    }
+    .portfolio{
+        height: 80%;
+        border: 2px solid blue;
         display: flex;
+        justify-content: center;
+        flex-direction: column;
+
     }
     #section4{
-        position: relative;
-        bottom:5%
+        position:relative;
+        height: 30vh;
+        /* margin-top: 150px; */
+        border: 2px solid tomato;
 
-    
+
     }
-    
+    .part2{
+        border: 2px solid yellow;
+        height: 75%;
+    }
+    .part1{
+        height: 20%;
+    }
+    .logo{
+       display: flex;
+       flex-wrap: wrap;
+    }
+    form input{
+        width: 50%;
+        display: block;
+
+    }
+
+    form textarea{
+        width: 20%;
+        position: relative;
+        left: 10%;
+        display: inline;
+    }
+   
 }
